# Nmap Changelog ($Id$); -*-text-*-

o Made nbase compile with the clang compiler that is a part of Xcode
  4.2. [Daniel J. Luke]

o [NSE] Applied patch that fixes a nil table index bug discovered in the
  mongodb library. [Thomas Buchanan]

o [NSE] Added ms-sql-dump-hashes, a script that dumps the MS SQL hashes in a
  format suitable for offline cracking. [Patrik]

o [NSE] Added bitcoinrpc-info by Toni Ruottu.

o Added a TCP Kerberos service probe. [Patrik]

o [NSE] The targets-ipv6-multicast-*.nse scripts now scan all
  interfaces by default. They show the MAC address and interface name
  now too. [David, Daniel Miller]

o [NSE] Added XMPP support to ssl-cert.nse.

o [NSE] Added http-cors by Toni Ruottu.

o [NSE] Added ganglia-info by Brendan Coles.

o [NSE] Added tftp-enum by Alexander Rudakov.

o [NSE] Added openlookup-info by Toni Ruottu.

o [NSE] Added amqp-info.nse by Sebastian Dragomir.

o [NSE] Made http-wordpress-enum.nse able to get names of users who
  have no posts. [Duarte Silva]

o Increased hop distance estimates from OS detection by one. The
  distance now counts the number of hops including the final one to
  the target, not just the number of intermediate nodes. The IPv6
  distance calculation already worked this way. [David]

Nmap 5.61TEST2 [2011-09-30]

o Added IPv6 OS detection system! The new system utilizes many tests
  similar to IPv4, and also some IPv6-specific ones that we found to
  be particularly effective. And it uses a machine learning approach
  rather than the static classifier we use for IPv4. We hope to move
  some of the IPv6 innovations back to our IPv4 system if they work
  out well. The database is still very small, so please submit any
  fingerprints that Nmap gives you to the specified URL (as long as
  you are certain that you know what the target system is
  running). Usage and results output are basically the same as with
  IPv4, but we will soon document the internal mechanisms at